# firecrawl-on-steroids

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURAL_EVALUATION.md  CLI_USE.md  IMPLEMENTATION_PLAN.md  docker-compose.antibot.yaml  docker-compose.chaser.yaml  docker-compose.crawl4ai.yaml  docker-compose.flaresolverr.yaml  docker-compose.obscura.yaml  docker-compose.yaml  start-firecrawl.sh  stop-firecrawl.sh
.github/scripts/: eval_run.py  test_eval_run.py
.github/workflows/: test-server.yml
apps/api/: .env.example  audit-ci.jsonc  knip.config.ts  pnpm-lock.yaml
apps/api/src/: config.ts
apps/api/src/lib/: antibot-fallback.ts  concurrency-limit.ts  crawl4ai-converter.ts  html-to-markdown.ts  (+2 more)
apps/chaser-service/: Cargo.toml  Dockerfile
apps/chaser-service/src/: main.rs  pool.rs  ssrf.rs
apps/elixir-sdk/: mix.exs
apps/elixir-sdk/lib/: firecrawl.ex
apps/js-sdk/firecrawl/: package.json  pnpm-lock.yaml
apps/nodriver-adapter/: Dockerfile  requirements.txt
apps/nodriver-adapter/app/: main.py
apps/playwright-service-ts/: Dockerfile  api.ts  package.json  pnpm-lock.yaml
apps/ssrf-protection/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/ssrf-protection/src/: index.ts
apps/stealth-bridge/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/stealth-bridge/src/: index.ts
apps/test-suite/: package.json  pnpm-lock.yaml
docs-staging/agent-quickstart/: elixir.mdx  java.mdx  node.mdx  python.mdx  rust.mdx
release-drafts/v2.11.0/: changelog-post.mdx  github-release.md
release-drafts/v3.0.0/: github-release.md
(+53 files in other folders)
